<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_grad"
    tools:context=".LogIn">

    <RelativeLayout
        android:id="@+id/rel_all"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:layout_below="@+id/ic_logo"
        android:layout_centerHorizontal="true"
        android:background="@drawable/new_green">

        <TextView
            android:id="@+id/txt_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/sign_in_f"
            android:textColor="#FF7F50"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_registration"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:background="@drawable/gra_orange"
            android:text="@string/sign_in_application"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@null"
            android:text="@string/registration"
            android:textColor="#FFF"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_enter_email"
            android:layout_width="213dp"
            android:layout_height="30dp"
            android:layout_above="@+id/edit_mail"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-100dp"
            android:paddingTop="3dp"
            android:text="@string/input_mail"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/txt_enter_password"
            android:layout_width="213dp"
            android:layout_height="30dp"
            android:layout_above="@+id/edit_password"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:text="@string/input_password"
            android:textColor="#FFF" />

        <EditText
            android:id="@+id/edit_mail"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:background="@drawable/gra_white"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:textColor="#82B47B"
            android:textColorHint="#82B47B"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="113dp"
            android:background="@drawable/gra_white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:paddingLeft="6dp"
            android:paddingStart="6dp"
            android:textColor="#82B47B"
            android:textColorHint="#82B47B"
            tools:ignore="RtlSymmetry,TextFields" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_skip_login"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_below="@+id/rel_all"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/gra_orange"
        android:text="@string/skip_m"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ic_logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo" />


</RelativeLayout>