<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8CCB5E"
    tools:context=".EarnCoins">

    <ImageView
        android:id="@+id/ic_coins"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_above="@+id/txt_available"
        android:layout_alignStart="@+id/txt_start"
        android:contentDescription="@string/todo"
        android:layout_alignLeft="@+id/txt_start" />

    <TextView
        android:id="@+id/txt_start"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ic_play"
        android:layout_alignLeft="@+id/txt_view"
        android:layout_alignStart="@+id/txt_view"
        android:text="@string/move"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_view"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/ic_play"
        android:layout_marginEnd="60dp"
        android:text="@string/watch"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp" />

    <TextView
        android:id="@+id/txt_available"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="86dp"
        android:layout_marginEnd="19dp"
        android:text="@string/you_wt"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_marginRight="19dp" />

    <TextView
        android:id="@+id/txt_coins"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_available"
        android:layout_alignStart="@+id/txt_available"
        android:layout_below="@+id/txt_available"
        android:layout_marginTop="-86dp"
        android:paddingTop="5dp"
        android:text="@string/coinss"
        android:textAlignment="center"
        android:textColor="#FFFF00"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ic_play"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txt_earn_coins"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:text="@string/work_co"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#47B97D"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_see"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ic_video_logo"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp"
            android:text="@string/wat"
            android:textColor="#FFF"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ic_video_logo"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:text="@string/video"
            android:textColor="#FFF"
            android:textSize="23sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ic_video_logo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/todo" />
    </RelativeLayout>
</RelativeLayout>