<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RulesOneToOne">

    <Button
        android:id="@+id/btn_skip_rules_onetoone"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:background="@drawable/gra_orange"
        android:text="@string/drop_rules"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rel_two"
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/rel_one"
        android:layout_marginTop="279dp"
        android:background="#228B22	">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_one"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#8CCB5E">

        <TextView
            android:id="@+id/txt_rules_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:text="@string/rules"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_one_vs_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_rules_one"
            android:text="@string/one_vs_one"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_three"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:background="@drawable/new_green">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ic_rules">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_rules_one_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:lineSpacingExtra="5sp"
                    android:paddingTop="15dp"
                    android:scrollbars="none"
                    android:text="@string/rules_three"
                    android:textAlignment="center"
                    android:textColor="#FFF"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/ic_rules"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/todo" />
    </RelativeLayout>

</RelativeLayout>