<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".One_Normal">

    <Button
        android:id="@+id/btn_back_normal"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:background="@drawable/gra_orange"
        android:text="@string/back"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rel_two"
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/rel_one"
        android:layout_marginTop="279dp"
        android:background="#228B22	">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_one"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#8CCB5E">

        <TextView
            android:id="@+id/txt_one_vs_one_norm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:text="@string/one_vs_one"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_simple_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txt_one_vs_one_norm"
            android:text="@string/easy_mode"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_three"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:background="@drawable/new_green">

        <TextView
            android:id="@+id/txt_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txt_your_word"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:text=""
            android:textColor="#FFF"
            android:textSize="27sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ic_ok_left"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/textView16"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/textView16"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="40dp"
            android:contentDescription="@string/todo"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ic_ok_right"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/ic_ok_left"
            android:layout_marginRight="40dp"
            android:contentDescription="@string/todo"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txt_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ic_player_one"
            android:layout_centerHorizontal="true"
            android:text="@string/score"
            android:textSize="20sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/txt_your_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txt_main_word"
            android:layout_centerHorizontal="true"
            android:text="@string/your_word"
            android:textSize="11sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/txt_main_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_player_one"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ic_player_one"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/ic_player_one"
            android:text="@string/player_one"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_score_one"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ic_player_one"
            android:layout_alignStart="@+id/ic_player_one"
            android:layout_below="@+id/ic_player_one"
            android:text="@string/null_null"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_player_two"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ic_player_two"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/ic_player_two"
            android:text="@string/player_two"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_score_two"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ic_player_two"
            android:layout_alignStart="@+id/ic_player_two"
            android:layout_below="@+id/ic_player_one"
            android:text="@string/null_null"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ic_player_one"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/ic_player_two"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/ic_player_one"
            android:layout_marginEnd="39dp"
            android:layout_marginRight="39dp"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reel_back_norm"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:background="@drawable/new_green">

        <TextView
            android:id="@+id/txt_back_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txt_count"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="обратный отсчет"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txt_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="3"
            android:textSize="200sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_start_game"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:background="@drawable/gra_orange"
            android:text="Начать игру"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>